# thesis

./: .buildinfo  .flake8  .gitignore  CITATION.bib  LICENSE  Makefile  README.rst  TODO.md  TODO.rst  abstract.html  abstract.rst  acknowledgements.html  acknowledgements.rst  appendix.rst  citations_example.rst  conclusion.html  conf.py  demonstration.html  derivations.html  example.rst  foil_aerodynamics.html  foil_geometry.html  genindex.html  glossary.html  index-latex.rst  index.html  index.rst  intro.rst  introduction.html  introduction.rst  notation.html  objects.inv  paraglider_components.html  pyproject.toml  related_works.html  search.html  searchindex.js  state_dynamics.html  svg_to_pdf.sh  system_dynamics.html  (+8 more)
.doctrees/: abstract.doctree  acknowledgements.doctree  conclusion.doctree  demonstration.doctree  derivations.doctree  environment.pickle  foil_aerodynamics.doctree  foil_geometry.doctree  glossary.doctree  index.doctree  introduction.doctree  notation.doctree  paraglider_components.doctree  related_works.doctree  state_dynamics.doctree  system_dynamics.doctree  validation.doctree  zreferences.doctree
_sources/: acknowledgements.rst.txt  conclusion.rst.txt  demonstration.rst.txt  derivations.rst.txt  foil_aerodynamics.rst.txt  foil_geometry.rst.txt  glossary.rst.txt  index.rst.txt  introduction.rst.txt  notation.rst.txt  paraglider_components.rst.txt  related_works.rst.txt  state_dynamics.rst.txt  system_dynamics.rst.txt  validation.rst.txt
content/: abstract.rst  appendix.rst  body.rst  data.rst  data_preparation.rst  dtw.rst  example.rst  wind.rst  (+15 more)
(+1956 files in other folders)
